--- a/SpringAOP/pom.xml
+++ b/SpringAOP/pom.xml
@@ -60,7 +60,7 @@
 						</transformer>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>com.assignmentone.partone.three.springaop.bookbeforeadvice</mainClass>
+							<mainClass>com.assignmentone.partone.three.springaop.BookBeforeAdvice</mainClass>
 						</transformer>
 					</transformers>
 					<finalName>book-before-advice</finalName>
@@ -82,7 +82,7 @@
 						</transformer>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>com.assignmentone.partone.three.springaop.bookafterreturningadvice</mainClass>
+							<mainClass>com.assignmentone.partone.three.springaop.BookAfterReturningAdvice</mainClass>
 						</transformer>
 					</transformers>
 					<finalName>book-after-returning-advice</finalName>
@@ -104,7 +104,7 @@
 						</transformer>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>com.assignmentone.partone.three.springaop.bookthrowsadvice</mainClass>
+							<mainClass>com.assignmentone.partone.three.springaop.BookThrowsAdvice</mainClass>
 						</transformer>
 					</transformers>
 					<finalName>book-throws-advice</finalName>
