--- a/spring-jdbc-book-publishing-pt1/pom.xml
+++ b/spring-jdbc-book-publishing-pt1/pom.xml
@@ -3,4 +3,88 @@
   <groupId>com.assignment2.part1.springjdbc</groupId>
   <artifactId>spring-jdbc-book-publishing-pt1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <name>spring-jdbc-book-publishing-pt1</name>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring.version>5.0.2.RELEASE</spring.version>
+    <slf4j.log4j.version>1.7.6</slf4j.log4j.version>
+    <mysql.client.version>5.1.29</mysql.client.version>
+	<dbcp.version>1.4</dbcp.version>
+  </properties>
+  <dependencies>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>${slf4j.log4j.version}</version>
+       </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.client.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>${dbcp.version}</version>
+      </dependency>
+	  <dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.7</version>
+	  </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-shade-plugin</artifactId>
+		<version>3.1.0</version>
+		<executions>
+			<execution>
+				<phase>package</phase>
+				<id>spring-jdbc-datasources</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.FindAllCategoriedApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-datasources</finalName>
+				</configuration>
+			  </execution>
+			</executions>
+		</plugin>  
+    </plugins>
+  </build>  
 </project>
+  
