--- a/spring-jdbc-book-publishing-pt1/pom.xml
+++ b/spring-jdbc-book-publishing-pt1/pom.xml
@@ -76,10 +76,120 @@
 						</transformer>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>com.assignment2.part1.jdbc.app.FindAllCategoriedApp</mainClass>
+							<mainClass>com.assignment2.part1.jdbc.app.FindAllCategoriesApp</mainClass>
 						</transformer>
 					</transformers>
 					<finalName>spring-jdbc-datasources</finalName>
+				</configuration>
+			  </execution>
+			  <execution>
+				<phase>package</phase>
+				<id>spring-jdbc-findallbooks</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.FindAllBooksApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-findallbooks</finalName>
+				</configuration>
+			  </execution>
+			    <execution>
+				<phase>package</phase>
+				<id>spring-jdbc-SelectBooksByCategoryName</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.SelectBooksByCategoryNameApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-SelectBooksByCategoryName</finalName>
+				</configuration>
+			  </execution>
+			  <execution>
+				<phase>package</phase>
+				<id>spring-jdbc-insertBook</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.InsertBookApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-insertBook</finalName>
+				</configuration>
+			  </execution>
+			  <execution>
+				<phase>package</phase>
+				<id>spring-jdbc-deleteBook</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.DeleteBookApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-deleteBook</finalName>
+				</configuration>
+			  </execution>
+			  <execution>
+				<phase>package</phase>
+				<id>spring-jdbc-updateBook</id>
+				<goals>
+					<goal>shade</goal>
+				</goals>
+				<configuration>
+					<transformers>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.assignment2.part1.jdbc.app.UpdateBookApp</mainClass>
+						</transformer>
+					</transformers>
+					<finalName>spring-jdbc-updateBook</finalName>
 				</configuration>
 			  </execution>
 			</executions>
